--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
       <span>Alejandro Carmona Bernabeu</span>
     </a>
 
+    <input type="checkbox" id="nav-toggle" class="nav-toggle">
+
+    <label for="nav-toggle" class="toggle-menu" aria-label="Abrir menú">
+      <span class="fa-solid fa-bars"></span>
+    </label>
+
+
     <ul class="menu">
       <li><a href="#sobre-mi">Sobre mí</a></li>
       <li><a href="#tecnologias">Tecnologías</a></li>
